--- a/frontend/src/components/Contact/Contact.css
+++ b/frontend/src/components/Contact/Contact.css
@@ -101,3 +101,27 @@ button:hover {
     font-size: 16px;
   }
 }
+
+@media screen and (max-width: 500px) {
+  .contact-form {
+    padding: 0;
+  }
+
+    #contact {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding-top: 150px;
+      padding-right: 60px;
+      padding-bottom: 150px;
+      padding-left: 60px;
+      margin-top: -60px;
+    }
+}
+
+@media screen and (max-width: 375px) {
+  h2 {
+    font-size: 18px;
+  }
+}
