--- a/frontend/src/components/Skills/Skills.css
+++ b/frontend/src/components/Skills/Skills.css
@@ -130,6 +130,10 @@
     margin-left: 20px;
   }
 
+  h1 {
+    font-size: 20px
+  }
+
 }
 
 @media screen and (max-width: 375px) {
@@ -144,12 +148,12 @@
   }
 
   .skills-card {
-    max-width: 140px;
+    max-width: 120px;
     max-height: 170px;
   }
 
   .skills-heading {
-    font-size: 24px;
+    font-size: 18px;
   }
 
   .skill-title {
