Added the Projects component and css for that component

--- a/frontend/src/components/Contact/Contact.css
+++ b/frontend/src/components/Contact/Contact.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-top: 150px;
+  padding-top: 210px;
   padding-right: 80px;
   padding-bottom: 150px;
   padding-left: 80px;
@@ -12,6 +12,7 @@
 
 h2 {
   font-size: 2em;
+  margin-bottom: 50px;
 }
 
 .contact-form {
